# prompt-pipeline

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
src/: decorators.py  pipeline.py  types.py
src/prompt_pipeline/: __init__.py  prompt.py
